# autobot

./: .gitignore  LICENSE  README.md  pyproject.toml
autobot/: __main__.py  config.py  github_client.py  main.py  prompts.py  results.py  sdk_hooks.py  state.py  worker.py
autobot/sources/: base.py  local_files.py
docs/: open-questions.md  roadmap.md
docs/design/: destinations.md  v0-1-pr-revision.md  v0-2-merge-detection.md
tests/: conftest.py  test_poll_loop.py  test_results.py  test_results_v0_1.py  test_revision_loop.py  test_sdk_hooks.py  test_sources_local_files.py  test_stale_lease_recovery.py  test_state.py  test_state_v0_1.py  test_worker_smoke.py
